Add tab bar controller

--- a/app/pollutionreporter/Base.lproj/Main.storyboard
+++ b/app/pollutionreporter/Base.lproj/Main.storyboard
@@ -1,24 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gTe-Wa-YHl">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Sensors-->
+        <scene sceneID="hh8-Sc-obZ">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="nlY-EP-Sxt" customClass="SensorsViewController" customModule="pollutionreporter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IS7-fy-6fW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="qnf-J0-MHH"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Sensors" image="analytics" id="5ix-yw-4tl"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mPo-Es-Sjd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-252" y="99"/>
+        </scene>
+        <!--Captures-->
+        <scene sceneID="u0J-qi-hoC">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j6b-f2-mqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="hY1-n4-VQV" customClass="CapturesViewController" customModule="pollutionreporter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9ud-ql-qVg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="kcw-nq-Odg"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Captures" image="file" id="Y3m-G7-FKz"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="-252" y="769"/>
+        </scene>
+        <!--Reports-->
+        <scene sceneID="M9C-cu-8Wd">
+            <objects>
+                <viewController id="ZxB-Ww-cRO" customClass="ReportsViewController" customModule="pollutionreporter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cAK-rD-53O">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="UDg-PB-jgy"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Reports" image="gps" id="2Hm-Ot-F2z"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="znp-Y1-UnN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-252" y="-1234"/>
+        </scene>
+        <!--Public-->
+        <scene sceneID="mth-XY-wFv">
+            <objects>
+                <viewController id="C2O-S8-uOf" customClass="PublicViewController" customModule="pollutionreporter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Pvh-GZ-meJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="OeJ-pL-HjP"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Public" image="cloud-computing" id="NCP-3T-evo"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ODF-Lx-zJL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-252" y="-565"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="DRp-sU-1DA">
+            <objects>
+                <tabBarController id="gTe-Wa-YHl" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9HG-Pe-Frw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ZxB-Ww-cRO" kind="relationship" relationship="viewControllers" id="3x1-dL-Bld"/>
+                        <segue destination="C2O-S8-uOf" kind="relationship" relationship="viewControllers" id="8ia-nD-ct3"/>
+                        <segue destination="nlY-EP-Sxt" kind="relationship" relationship="viewControllers" id="LLU-fV-xaH"/>
+                        <segue destination="hY1-n4-VQV" kind="relationship" relationship="viewControllers" id="f95-1V-uam"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zhD-Uj-OI9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1204" y="-233"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="analytics" width="384" height="384"/>
+        <image name="cloud-computing" width="384" height="384"/>
+        <image name="file" width="384" height="384"/>
+        <image name="gps" width="300" height="300"/>
+    </resources>
 </document>
